# autodosie

./: .env.example  .gitattributes  .gitignore  README.md  pyproject.toml
.github/workflows/: deploy.yml
deploy/: autodosie-bot.service  autodosie-bot.sudoers  autodosie-web.service  autodosie-web.sudoers  autodosie.ru.nginx.conf  bootstrap-server.sh  remote-deploy.sh
src/autodosie_bot/: __init__.py  __main__.py  app.py  config.py  logging_config.py  query.py  validation.py  web.py  web_main.py
src/autodosie_bot/handlers/: __init__.py  check_gibdd.py  check_vin.py  common.py
src/autodosie_bot/services/: __init__.py  base.py  factory.py  free_report.py  gibdd.py  nhtsa.py  stub.py
src/autodosie_bot/static/: site.css
src/autodosie_bot/templates/: base.html  gibdd_captcha.html  index.html  report.html  sources.html
