[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autodosie-web"
version = "0.1.0"
description = "Website for vehicle checks by VIN and Russian plate"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115,<0.117",
    "httpx>=0.27,<0.29",
    "jinja2>=3.1,<4.0",
    "python-multipart>=0.0.9,<1.0",
    "python-dotenv>=1.0,<2.0",
    "uvicorn>=0.34,<0.39",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.11,<0.12",
]

[project.scripts]
autodosie-web = "autodosie_bot.web_main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
autodosie_bot = ["static/*.css", "templates/*.html"]
